--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
+    <head>
     <title>Heavenly Hotel</title>
   </head>
   <body>
-    <h1>Heavenly Hotel</h1>
+    <header>
+      <article class="logo-box">
+        <h1>Heavenly Hotel</h1>
+        <p>Find Peace in Paradise</p>
+      </article>
+    </header>
+    <main>
+      <section class="login-modal">
+        <form class='login'>
+          <section class='login-container'>
+            <h2>Start your journey</h2>
+            <section class='form-input'>
+              <label for="username input">Username:</label>
+              <input type='text' aria-label="username-input" class='inputs' placeholder='Enter Username' name='username' required>
+            </section>
+            <section class='form-input'>
+              <label for='password input'>Password:</label>
+              <input type='password' aria-label="password-input" class='inputs' placeholder='Enter Password' name='psw' required>
+              <button type="submit" aria-label="submit-login-form" class='login-btn'>Login</button>
+              <p class='login-error'></p>
+              </form>
+            </section>
+          </section>
+      </section>
 
-    <img src="./images/turing-logo.png" alt="turing logo" height="100px" width="100px">
+    </main>
+
 
     <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
   </body>
