--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-    <title>Heavenly Hotel</title>
+    <title>The Overlook</title>
   </head>
   <body>
     <header>
       <article class="logo-box">
-        <h1>Heavenly Hotel</h1>
-        <p>Find Peace in Paradise</p>
+        <h1>The Overlook</h1>
+        <p>Out of the Office, Into Serenity</p>
       </article>
     </header>
     <main>
@@ -28,10 +28,8 @@
             </section>
           </section>
       </section>
-
     </main>
 
 
-    <!-- Do not include the index.js or main.bundle.js file here - it is done automatically by the webpack server -->
   </body>
 </html>
