Move button to own line in login

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
             </section>
             <section class='form-input'>
               <label for='password input'>Password:</label>
-              <input type='password' aria-label="password-input" class='inputs' placeholder='Enter Password' name='psw' required>
-              <button type="submit" aria-label="submit-login-form" class='login-btn'>Login</button>
+              <input type='password' aria-label="password-input" class='inputs' id="pw-input" placeholder='Enter Password' name='psw' required>
               <p class='login-error'></p>
-              </form>
+            </form>
+            <button type="submit" aria-label="submit-login-form" class='login-btn'>Login</button>
             </section>
           </section>
       </section>
