--- a/src/index.html
+++ b/src/index.html
@@ -7,26 +7,23 @@
     <header>
       <article class="logo-box">
         <h1>The Overlook</h1>
-        <p>Out of the Office, Into Serenity</p>
       </article>
     </header>
     <main>
       <section class="login-modal">
         <form class='login'>
-          <section class='login-container'>
-            <h2>Start your journey</h2>
-            <section class='form-input'>
-              <label for="username input">Username:</label>
-              <input type='text' aria-label="username-input" class='inputs' placeholder='Enter Username' name='username' required>
-            </section>
-            <section class='form-input'>
-              <label for='password input'>Password:</label>
-              <input type='password' aria-label="password-input" class='inputs' id="pw-input" placeholder='Enter Password' name='psw' required>
-              <p class='login-error'></p>
-            </form>
-            <button type="submit" aria-label="submit-login-form" class='login-btn'>Login</button>
-            </section>
+          <h2>Adventure Awaits</h2>
+          <section class='form-input'>
+            <label for="username input">Username:</label>
+            <input type='text' aria-label="username-input" class='inputs' placeholder='Enter Username' name='username' required>
           </section>
+          <section class='form-input'>
+            <label for='password input'>Password:</label>
+            <input type='password' aria-label="password-input" class='inputs' id="pw-input" placeholder='Enter Password' name='psw' required>
+          </section>
+            <p class='login-error'></p>
+            <button type="submit" aria-label="submit-login-form" class='login-btn'>Login</button>
+        </form>
       </section>
     </main>
 
