Change font of logo

--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,15 @@
         <form class='login'>
           <h2>Adventure Awaits</h2>
           <section class='form-input'>
-            <label for="username input">Username:</label>
+            <!-- <label for="username input">Username:</label> -->
             <input type='text' aria-label="username-input" class='inputs' placeholder='Enter Username' name='username' required>
           </section>
           <section class='form-input'>
-            <label for='password input'>Password:</label>
+            <!-- <label for='password input'>Password:</label> -->
             <input type='password' aria-label="password-input" class='inputs' id="pw-input" placeholder='Enter Password' name='psw' required>
           </section>
             <p class='login-error'></p>
-            <button type="submit" aria-label="submit-login-form" class='login-btn'>Login</button>
+            <button type="submit" aria-label="submit-login-form" class='login-btn'>Explore</button>
         </form>
       </section>
     </main>
