Make login modal responsive

--- a/src/index.html
+++ b/src/index.html
@@ -5,26 +5,33 @@
   </head>
   <body>
     <header>
-      <article class="logo-box">
         <h1>The Overlook</h1>
-      </article>
     </header>
     <main>
       <section class="login-modal">
         <form class='login'>
           <h2>Adventure Awaits</h2>
           <section class='form-input'>
-            <!-- <label for="username input">Username:</label> -->
             <input type='text' aria-label="username-input" class='inputs' placeholder='Enter Username' name='username' required>
           </section>
           <section class='form-input'>
-            <!-- <label for='password input'>Password:</label> -->
             <input type='password' aria-label="password-input" class='inputs' id="pw-input" placeholder='Enter Password' name='psw' required>
           </section>
             <p class='login-error'></p>
             <button type="submit" aria-label="submit-login-form" class='login-btn'>Explore</button>
         </form>
       </section>
+      <section class='managerView'>
+        <article class='quick-view'>
+          <h5>Daily Ledger</h5>
+          <div class='mgr-stats'>
+            <p>Available Lodging:</p>
+            <p>Occupied Lodging:</p>
+            <p>Revenue:</p> 
+          </div>
+        </article>
+      </section>
+
     </main>
 
 
