Add styling for manager view

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             <button type="submit" aria-label="submit-login-form" class='login-btn'>Explore</button>
         </form>
       </section>
-      <section class='managerView'>
+      <section class='manager-view'>
         <article class='quick-view'>
           <h5>Daily Ledger</h5>
           <div class='mgr-stats'>
@@ -30,6 +30,40 @@
             <p>Revenue:</p> 
           </div>
         </article>
+        <div class="search-bar">
+          <button class="mgr-search-btn">Find</button>
+          <input type="text" class="inputs" id="search-text" placeholder="Search Guest Name" maxlength="70" minlength="0">
+          <button class="clear-text-btn">Clear</button>
+        </div>
+        <section class='known-guests'>
+          <div class='guest-card'>
+            <h4>Sarah Watkins</h4>
+            <p>Total Expenditures:</p>
+            <button class='expand-found-guest-btn'>Stays</button>
+          </div>
+          <div class='guest-card'>
+            <h4>Sarah Watkins</h4>
+            <p>Total Expenditures:</p>
+            <button class='expand-found-guest-btn'>Stays</button>
+          </div><div class='guest-card'>
+            <h4>Sarah Watkins</h4>
+            <p>Total Expenditures:</p>
+            <button class='expand-found-guest-btn'>Stays</button>
+          </div><div class='guest-card'>
+            <h4>Sarah Watkins</h4>
+            <p>Total Expenditures:</p>
+            <button class='expand-found-guest-btn'>Stays</button>
+          </div><div class='guest-card'>
+            <h4>Sarah Watkins</h4>
+            <p>Total Expenditures:</p>
+            <button class='expand-found-guest-btn'>Stays</button>
+          </div><div class='guest-card'>
+            <h4>Sarah Watkins</h4>
+            <p>Total Expenditures:</p>
+            <button class='expand-found-guest-btn'>Stays</button>
+          </div>
+        </section>
+
       </section>
 
     </main>
