Make user cards in manager view

--- a/src/index.html
+++ b/src/index.html
@@ -23,43 +23,42 @@
       </section>
       <section class='manager-view'>
         <article class='quick-view'>
-          <h5>Daily Ledger</h5>
           <div class='mgr-stats'>
-            <p>Available Lodging:</p>
-            <p>Occupied Lodging:</p>
-            <p>Revenue:</p> 
+            <p id="open-rooms">Available Lodging:</p>
+            <p id="booked-rooms">Occupied Lodging:</p>
+            <p id="revenue"> Revenue:</p> 
           </div>
-        </article>
         <div class="search-bar">
+          <input type="text" class="inputs" id="search-guest-input" placeholder="Search Guest Name" maxlength="70" minlength="0">
           <button class="mgr-search-btn">Find</button>
-          <input type="text" class="inputs" id="search-text" placeholder="Search Guest Name" maxlength="70" minlength="0">
           <button class="clear-text-btn">Clear</button>
         </div>
+      </article>
         <section class='known-guests'>
           <div class='guest-card'>
             <h4>Sarah Watkins</h4>
-            <p>Total Expenditures:</p>
+            <p>Total Spent:</p>
             <button class='expand-found-guest-btn'>Stays</button>
           </div>
           <div class='guest-card'>
             <h4>Sarah Watkins</h4>
-            <p>Total Expenditures:</p>
+            <p>Total Spent:</p>
             <button class='expand-found-guest-btn'>Stays</button>
           </div><div class='guest-card'>
             <h4>Sarah Watkins</h4>
-            <p>Total Expenditures:</p>
+            <p>Total Spent:</p>
             <button class='expand-found-guest-btn'>Stays</button>
           </div><div class='guest-card'>
             <h4>Sarah Watkins</h4>
-            <p>Total Expenditures:</p>
+            <p>Total Spent:</p>
             <button class='expand-found-guest-btn'>Stays</button>
           </div><div class='guest-card'>
             <h4>Sarah Watkins</h4>
-            <p>Total Expenditures:</p>
+            <p>Total Spent:</p>
             <button class='expand-found-guest-btn'>Stays</button>
           </div><div class='guest-card'>
             <h4>Sarah Watkins</h4>
-            <p>Total Expenditures:</p>
+            <p>Total Spent:</p>
             <button class='expand-found-guest-btn'>Stays</button>
           </div>
         </section>
