Add html draft for guest view

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         <h1>The Overlook</h1>
     </header>
     <main>
-      <section class="login-modal">
+      <section class='login-modal'>
         <form class='login'>
           <h2>Adventure Awaits</h2>
           <section class='form-input'>
@@ -22,7 +22,7 @@
         </form>
       </section>
       <section class='manager-view'>
-        <article class='quick-view'>
+        <article class='mgr-quick-view'>
           <div class='mgr-stats'>
             <p id="open-rooms">Available Lodging:</p>
             <p id="booked-rooms">Occupied Lodging:</p>
@@ -64,6 +64,17 @@
         </section>
 
       </section>
+      <section class='guest-view'>
+        <article class='guest-quick-view'>
+          <h4>Sarah Watkins</h4>
+          <p>Total Spent:</p>
+          <button class='guest-bookings-btns' id='guest-new-bookings'>Make New Booking</button>
+          <button class='guest-bookings-btns' id='guest-future-bookings'>Upcoming Bookings</button>
+          <button class='guest-bookings-btns' id='guest-current-bookings'>Current Booking</button>
+          <button class='guest-bookings-btns' id='guest-past-bookings'>Past Bookings</button>
+        </article>
+      </section>
+    </main>
 
     </main>
 
