Change bookings to reservations for guest

--- a/src/index.html
+++ b/src/index.html
@@ -68,10 +68,10 @@
         <article class='guest-quick-view'>
           <h4>Sarah Watkins</h4>
           <p>Total Spent:</p>
-          <button class='guest-bookings-btns' id='guest-new-bookings'>Make New Booking</button>
-          <button class='guest-bookings-btns' id='guest-future-bookings'>Upcoming Bookings</button>
-          <button class='guest-bookings-btns' id='guest-current-bookings'>Current Booking</button>
-          <button class='guest-bookings-btns' id='guest-past-bookings'>Past Bookings</button>
+          <button class='guest-bookings-btns' id='guest-new-bookings'>Make New Reservation</button>
+          <button class='guest-bookings-btns' id='guest-current-bookings'>Current Reservation</button>
+          <button class='guest-bookings-btns' id='guest-future-bookings'>Upcoming Reservations</button>
+          <button class='guest-bookings-btns' id='guest-past-bookings'>Past Reservations</button>
         </article>
       </section>
     </main>
