--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,13 @@
         <h1>The Overlook</h1>
     </header>
     <main>
-      <section class='login-modal'>
-        <form class='login'>
+        <form class='login-view'>
           <h2>Adventure Awaits</h2>
-          <section class='form-input'>
             <input type='text' aria-label="username-input" class='inputs' placeholder='Enter Username' name='username' required>
-          </section>
-          <section class='form-input'>
             <input type='password' aria-label="password-input" class='inputs' id="pw-input" placeholder='Enter Password' name='psw' required>
-          </section>
             <p class='login-error'></p>
             <button type="submit" aria-label="submit-login-form" class='login-btn'>Explore</button>
         </form>
-      </section>
       <section class='manager-view'>
         <article class='mgr-quick-view'>
           <div class='mgr-stats'>
@@ -38,28 +32,28 @@
           <div class='guest-card'>
             <h4>Sarah Watkins</h4>
             <p>Total Spent:</p>
-            <button class='expand-found-guest-btn'>Stays</button>
+            <button class='expand-found-guest-btn'>Reservations</button>
           </div>
           <div class='guest-card'>
             <h4>Sarah Watkins</h4>
             <p>Total Spent:</p>
-            <button class='expand-found-guest-btn'>Stays</button>
+            <button class='expand-found-guest-btn'>Reservations</button>
           </div><div class='guest-card'>
             <h4>Sarah Watkins</h4>
             <p>Total Spent:</p>
-            <button class='expand-found-guest-btn'>Stays</button>
+            <button class='expand-found-guest-btn'>Reservations</button>
           </div><div class='guest-card'>
             <h4>Sarah Watkins</h4>
             <p>Total Spent:</p>
-            <button class='expand-found-guest-btn'>Stays</button>
+            <button class='expand-found-guest-btn'>Reservations</button>
           </div><div class='guest-card'>
             <h4>Sarah Watkins</h4>
             <p>Total Spent:</p>
-            <button class='expand-found-guest-btn'>Stays</button>
+            <button class='expand-found-guest-btn'>Reservations</button>
           </div><div class='guest-card'>
             <h4>Sarah Watkins</h4>
             <p>Total Spent:</p>
-            <button class='expand-found-guest-btn'>Stays</button>
+            <button class='expand-found-guest-btn'>Reservations</button>
           </div>
         </section>
 
@@ -73,6 +67,7 @@
           <button class='guest-bookings-btns' id='guest-future-bookings'>Upcoming Reservations</button>
           <button class='guest-bookings-btns' id='guest-past-bookings'>Past Reservations</button>
         </article>
+
       </section>
     </main>
 
