--- a/src/index.html
+++ b/src/index.html
@@ -56,21 +56,27 @@
             <button class='expand-found-guest-btn'>Reservations</button>
           </div>
         </section>
-
       </section>
       <section class='guest-view'>
         <article class='guest-quick-view'>
-          <h4>Sarah Watkins</h4>
+          <h3>Sarah Watkins</h3>
           <p>Total Spent:</p>
           <button class='guest-bookings-btns' id='guest-new-bookings'>Make New Reservation</button>
           <button class='guest-bookings-btns' id='guest-current-bookings'>Current Reservation</button>
           <button class='guest-bookings-btns' id='guest-future-bookings'>Upcoming Reservations</button>
           <button class='guest-bookings-btns' id='guest-past-bookings'>Past Reservations</button>
         </article>
-
       </section>
-    </main>
-
+      <section class='guest-modal'>
+        <h5 class='guest-name'>Sarah Watkins</h5>
+        <button class='guest-bookings-btns' id='guest-all-bookings'>View All Reservations</button>
+        <button class='guest-bookings-btns' id='guest-new-bookings'>Make New Reservation</button>
+        <button class='guest-bookings-btns' id='guest-delete-bookings'>Delete Reservation</button>
+      </section>
+      <form class='make-new-reservation'>
+         <input type="date"></input> 
+        <button type="submit" aria-label="book-new-reservation-form" class='book-new-btn'></button>
+      </form>
     </main>
 
 
