Add method to sort bookings by user

--- a/src/index.html
+++ b/src/index.html
@@ -62,21 +62,22 @@
           <h3>Sarah Watkins</h3>
           <p>Total Spent:</p>
           <button class='guest-bookings-btns' id='guest-new-bookings'>Make New Reservation</button>
+          <!-- <form class='make-new-reservation'>
+            <input type="date"></input>
+            <button type="submit" aria-label="book-new-reservation-form" class='book-new-btn'></button>
+          </form> -->
           <button class='guest-bookings-btns' id='guest-current-bookings'>Current Reservation</button>
           <button class='guest-bookings-btns' id='guest-future-bookings'>Upcoming Reservations</button>
           <button class='guest-bookings-btns' id='guest-past-bookings'>Past Reservations</button>
         </article>
       </section>
-      <section class='guest-modal'>
+      <!-- <section class='guest-modal'>
         <h5 class='guest-name'>Sarah Watkins</h5>
         <button class='guest-bookings-btns' id='guest-all-bookings'>View All Reservations</button>
         <button class='guest-bookings-btns' id='guest-new-bookings'>Make New Reservation</button>
         <button class='guest-bookings-btns' id='guest-delete-bookings'>Delete Reservation</button>
-      </section>
-      <form class='make-new-reservation'>
-         <input type="date"></input> 
-        <button type="submit" aria-label="book-new-reservation-form" class='book-new-btn'></button>
-      </form>
+        </section>
+       -->
     </main>
 
 
