Add method to get and display customer's total amount spent on bookings

--- a/src/index.html
+++ b/src/index.html
@@ -59,8 +59,8 @@
       </section>
       <section class='guest-view'>
         <article class='guest-quick-view'>
-          <h3 class="guest-name">Sarah Watkins</h3>
-          <p>Total Spent:</p>
+          <h4 class='guest-name'>Sarah Watkins</h4>
+          <p class='guest-total-spent'>Total Spent:</p>
           <button class='guest-bookings-btns' id='guest-new-bookings'>Make New Reservation</button>
           <!-- <form class='make-new-reservation'>
             <input type="date"></input>
