Add fetch method to get roomService data

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,10 @@
             <p class='login-error'></p>
             <button type="submit" aria-label="submit-login-form" class='login-btn'>Explore</button>
         </form>
-      <section class='manager-view'>
+      <section class='manager-view hidden'>
         <article class='mgr-quick-view'>
           <div class='mgr-stats'>
+            <h4>Daily Ledger</h4>
             <p id="open-rooms">Available Lodging:</p>
             <p id="booked-rooms">Occupied Lodging:</p>
             <p id="revenue">Revenue:</p> 
