Add method to display searched users by first char

--- a/src/index.html
+++ b/src/index.html
@@ -29,34 +29,7 @@
           <button class="clear-text-btn">Clear</button>
         </div>
       </article>
-        <section class='known-guests'>
-          <div class='guest-card'>
-            <h4 class='mgr-guest-name'>Sarah Watkins</h4>
-            <p>Total Spent:</p>
-            <button class='expand-found-guest-btn'>Reservations</button>
-          </div>
-          <div class='guest-card'>
-            <h4>Sarah Watkins</h4>
-            <p>Total Spent:</p>
-            <button class='expand-found-guest-btn'>Reservations</button>
-          </div><div class='guest-card'>
-            <h4>Sarah Watkins</h4>
-            <p>Total Spent:</p>
-            <button class='expand-found-guest-btn'>Reservations</button>
-          </div><div class='guest-card'>
-            <h4>Sarah Watkins</h4>
-            <p>Total Spent:</p>
-            <button class='expand-found-guest-btn'>Reservations</button>
-          </div><div class='guest-card'>
-            <h4>Sarah Watkins</h4>
-            <p>Total Spent:</p>
-            <button class='expand-found-guest-btn'>Reservations</button>
-          </div><div class='guest-card'>
-            <h4>Sarah Watkins</h4>
-            <p>Total Spent:</p>
-            <button class='expand-found-guest-btn'>Reservations</button>
-          </div>
-        </section>
+        <section class='known-guests'></section>
       </section>
       <section class='guest-view'>
         <article class='guest-quick-view'>
