Move HTML to DomUpdates

--- a/src/index.html
+++ b/src/index.html
@@ -14,46 +14,9 @@
             <input type='password' aria-label="password-input" class='inputs' id="pw-input" placeholder='Enter Password' name='psw' required>
             <p class='login-error'></p>
             <button type="submit" aria-label="submit-login-form" class='login-btn'>Explore</button>
-        </form>
-      <section class='manager-view hidden'>
-        <article class='mgr-quick-view'>
-          <div class='mgr-stats'>
-            <h4>Daily Ledger</h4>
-            <p id="open-rooms">Available Lodging:</p>
-            <p id="booked-rooms">Occupied Lodging:</p>
-            <p id="revenue">Revenue:</p> 
-          </div>
-        <div class="search-bar">
-          <input type="text" class="inputs" id="search-guest-input" placeholder="Search Guest Name" maxlength="70" minlength="0">
-          <button class="mgr-search-btn">Find</button>
-          <button class="clear-text-btn">Clear</button>
-        </div>
-      </article>
-        <section class='known-guests'></section>
-      </section>
-      <section class='guest-view'>
-        <article class='guest-quick-view'>
-          <h4 class='guest-name'>Sarah Watkins</h4>
-          <p class='guest-total-spent'>Total Spent:</p>
-          <button class='guest-bookings-btns' id='guest-new-bookings'>Make New Reservation</button>
-          <!-- <form class='make-new-reservation'>
-            <input type="date"></input>
-            <button type="submit" aria-label="book-new-reservation-form" class='book-new-btn'></button>
-          </form> -->
-          <button class='guest-bookings-btns' id='guest-current-bookings'>Current Reservation</button>
-          <button class='guest-bookings-btns' id='guest-future-bookings'>Upcoming Reservations</button>
-          <button class='guest-bookings-btns' id='guest-past-bookings'>Past Reservations</button>
-        </article>
-      </section>
-      <!-- <section class='guest-modal'>
-        <h5 class='guest-name'>Sarah Watkins</h5>
-        <button class='guest-bookings-btns' id='guest-all-bookings'>View All Reservations</button>
-        <button class='guest-bookings-btns' id='guest-new-bookings'>Make New Reservation</button>
-        <button class='guest-bookings-btns' id='guest-delete-bookings'>Delete Reservation</button>
-        </section>
-       -->
+       </form>
+      <section class='manager-view'></section>
+      <section class='guest-view'></section>
     </main>
-
-
   </body>
 </html>
